# esp32-reptile-dashboard

./: .gitignore  CMakeLists.txt  README.md
components/core/animals/: animals.c  animals.h  idf_component.yml
components/core/ui/: CMakeLists.txt  idf_component.yml  ui_animals.c  ui_animals.h
components/core/utils/: CMakeLists.txt  idf_component.yml  logging.c  logging.h
components/drivers/lcd_st7262/: CMakeLists.txt  idf_component.yml  lcd_st7262.c  lcd_st7262.h
components/drivers/touch_gt911/: CMakeLists.txt  gt911.c  gt911.h  idf_component.yml
components/lvgl/: lvgl.h
components/storage/: storage.c  storage.h
data/: animals.json
main/: main.c
tests/: Makefile  test_storage.c  test_ui.c
tests/stubs/: lvgl.c  lvgl.h
